@@ -5,7 +5,7 @@ author: cephalin
 ms.author: cephalin
 ms.devlang: java
 ms.topic: tutorial
-ms.date: 04/30/2025
+ms.date: 08/18/2026
 ms.custom: mvc, devx-track-extended-java, AppServiceConnectivity
 zone_pivot_groups: app-service-portal-azd
 ms.service: azure-app-service
@@ -13,7 +13,7 @@ ms.service: azure-app-service
 
 # Tutorial: Deploy a Quarkus web app to Azure App Service and PostgreSQL
 
-In this tutorial, you deploy a data-driven [Quarkus](https://quarkus.io) web application to Azure App Service with the [Azure Database for PostgreSQL](/azure/postgresql/) relational database service. Azure App Service supports Java Standard Edition (Java SE) in a Windows or Linux server environment. 
+In this tutorial, you deploy a Java 25 data-driven [Quarkus 3.38.1](https://quarkus.io) web application to Azure App Service with [Azure Database for PostgreSQL flexible server](/azure/postgresql/flexible-server/) 16. The AZD workflow also provisions Azure Managed Redis. Azure App Service supports Java Standard Edition (Java SE) in a Windows or Linux server environment.
 
 :::image type="content" source="./media/tutorial-java-quarkus-postgresql-app/azure-portal-browse-app-2.png" alt-text="Screenshot of Quarkus application storing data in PostgreSQL.":::
 
@@ -28,7 +28,7 @@ In this tutorial, you learn how to:
 > * Generate database schema by running database migrations.
 > * Stream diagnostic logs from Azure.
 > * Manage the app in the Azure portal.
-> * Provision the same architecture and deploy by using Azure Developer CLI.
+> * Provision an expanded architecture with Azure Managed Redis and deploy it by using Azure Developer CLI.
 > * Optimize your development workflow with GitHub Codespaces and GitHub Copilot.
 
 ## Prerequisites
@@ -36,16 +36,17 @@ In this tutorial, you learn how to:
 ::: zone pivot="azure-portal"
 
 * An Azure account with an active subscription. If you don't have an Azure account, you [can create one for free](https://azure.microsoft.com/pricing/purchase-options/azure-account?cid=msft_learn).
-* A GitHub account. you can also [get one for free](https://github.com/join).
+* A GitHub account. You can also [get one for free](https://github.com/join).
 * Knowledge of Java with Quarkus development.
 * **(Optional)** To try GitHub Copilot, a [GitHub Copilot account](https://docs.github.com/copilot/using-github-copilot/using-github-copilot-code-suggestions-in-your-editor). A 30-day free trial is available.
 
 ::: zone-end
 
+<!-- markdownlint-disable-next-line MD044 -->
 ::: zone pivot="azure-developer-cli"
 
 * An Azure account with an active subscription. If you don't have an Azure account, you [can create one for free](https://azure.microsoft.com/pricing/purchase-options/azure-account?cid=msft_learn).
-* A GitHub account. you can also [get one for free](https://github.com/join).
+* A GitHub account. You can also [get one for free](https://github.com/join).
 * [Azure Developer CLI](/azure/developer/azure-developer-cli/install-azd) installed. You can follow the steps with the [Azure Cloud Shell](https://shell.azure.com) because it already has Azure Developer CLI installed.
 * Knowledge of Java with Quarkus development.
 * **(Optional)** To try GitHub Copilot, a [GitHub Copilot account](https://docs.github.com/copilot/using-github-copilot/using-github-copilot-code-suggestions-in-your-editor). A 30-day free trial is available.
@@ -54,18 +55,20 @@ In this tutorial, you learn how to:
 
 ## Skip to the end
 
-If you just want to see the sample app in this tutorial running in Azure, just run the following commands in the [Azure Cloud Shell](https://shell.azure.com), and follow the prompt:
+If you just want to see the sample app in this tutorial running in Azure, run the following commands in [Azure Cloud Shell](https://shell.azure.com) and follow the prompts. The environment name must be no more than 25 characters so that generated Azure Managed Redis names satisfy cross-region naming limits.
 
 ```bash
-mkdir msdocs-quarkus-postgresql-sample-app
+git clone https://github.com/Azure-Samples/msdocs-quarkus-postgresql-sample-app
 cd msdocs-quarkus-postgresql-sample-app
-azd init --template msdocs-quarkus-postgresql-sample-app
+azd auth login
+azd env new <environment-name>
+azd provision --preview
 azd up
 ```
 
 ## 1. Run the sample
 
-First, you set up a sample data-driven app as a starting point. For your convenience, the sample repository, [Hibernate ORM with Panache and RESTEasy](https://github.com/Azure-Samples/msdocs-quarkus-postgresql-sample-app), includes a [dev container](https://docs.github.com/codespaces/setting-up-your-project-for-codespaces/adding-a-dev-container-configuration/introduction-to-dev-containers) configuration. The dev container has everything you need to develop an application, including the database, cache, and all environment variables needed by the sample application. The dev container can run in a [GitHub codespace](https://docs.github.com/en/codespaces/overview), which means you can run the sample on any computer with a web browser.
+First, set up a sample data-driven app as a starting point. For your convenience, the sample repository, [Hibernate ORM with Panache and RESTEasy](https://github.com/Azure-Samples/msdocs-quarkus-postgresql-sample-app), includes a [dev container](https://docs.github.com/codespaces/setting-up-your-project-for-codespaces/adding-a-dev-container-configuration/introduction-to-dev-containers) configuration. The dev container provides Java 25, the development tools, PostgreSQL 16, and the environment variables needed to run the sample locally. It doesn't provide a local Redis service. The dev container can run in a [GitHub codespace](https://docs.github.com/en/codespaces/overview), which means you can run the sample on any computer with a web browser.
 
 :::row:::
     :::column span="2":::
@@ -79,6 +82,8 @@ First, you set up a sample data-driven app as a starting point. For your conveni
         :::image type="content" source="./media/tutorial-java-quarkus-postgresql-app/azure-portal-run-sample-application-1.png" alt-text="A screenshot showing how to create a fork of the sample GitHub repository." lightbox="./media/tutorial-java-quarkus-postgresql-app/azure-portal-run-sample-application-1.png":::
     :::column-end:::
 :::row-end:::
+::: zone pivot="azure-portal"
+
 :::row:::
     :::column span="2":::
         **Step 2:** In the GitHub fork:
@@ -90,6 +95,16 @@ First, you set up a sample data-driven app as a starting point. For your conveni
         :::image type="content" source="./media/tutorial-java-quarkus-postgresql-app/azure-portal-run-sample-application-2.png" alt-text="A screenshot showing how to create a codespace in GitHub." lightbox="./media/tutorial-java-quarkus-postgresql-app/azure-portal-run-sample-application-2.png":::
     :::column-end:::
 :::row-end:::
+
+::: zone-end
+
+<!-- markdownlint-disable-next-line MD044 -->
+::: zone pivot="azure-developer-cli"
+
+**Step 2:** In the GitHub fork, leave **main** selected and select **Code** > **Create codespace on main**. This branch contains the sample application and its AZD configuration. The codespace takes a few minutes to set up.
+
+::: zone-end
+
 :::row:::
     :::column span="2":::
         **Step 3:** In the codespace terminal:
@@ -98,6 +113,7 @@ First, you set up a sample data-driven app as a starting point. For your conveni
         1. When you see the notification `Your application running on port 8080 is available.`, select **Open in Browser**.
         You should see the sample application in a new browser tab.
         To stop the Quarkus development server, type `Ctrl`+`C`.
+        The first startup on Java 25 can take a few minutes while Maven downloads dependencies and Quarkus initializes.
     :::column-end:::
     :::column:::
         :::image type="content" source="./media/tutorial-java-quarkus-postgresql-app/azure-portal-run-sample-application-3.png" alt-text="A screenshot showing how to run the sample application inside the GitHub codespace." lightbox="./media/tutorial-java-quarkus-postgresql-app/azure-portal-run-sample-application-3.png":::
@@ -118,7 +134,7 @@ Having issues? Check the [Troubleshooting section](#troubleshooting).
 
 ## 2. Create App Service and PostgreSQL
 
-In this step, you create the Azure resources. The steps used in this tutorial create a set of secure-by-default resources that include App Service and Azure Database for PostgreSQL. For the creation process, you specify:
+In this step, you create the Azure resources for the portal workflow. The completed app uses Java 25, Quarkus 3.38.1, and Azure Database for PostgreSQL flexible server 16. For the creation process, specify:
 
 * The **Name** for the web app. It's used as part of the DNS name for your app in the form of `https://<app-name>-<hash>.<region>.azurewebsites.net`.
 * The **Region** to run the app physically in the world. It's also used as part of the DNS name for your app.
@@ -145,19 +161,12 @@ Sign in to the [Azure portal](https://portal.azure.com/) and follow these steps 
         **Step 2: Configure the new app**
         Fill out the form as follows.
         1. *Name*: **msdocs-quarkus-postgres**. A resource group named **msdocs-quarkus-postgres_group** is generated for you.
-        1. *Runtime stack*: **Java 21**.
+        1. *Runtime stack*: **Java 25**.
         1. *Java web server stack*: **Java SE (Embedded Web Server)**.
         1. *Operating system*: **Linux**.
         1. *Region*: Any Azure region near you.
         1. *Linux Plan*: **Create new** and use the name **msdocs-quarkus-postgres**.
         1. *Pricing plan*: **Basic B1**. When you're ready, you can [scale up](manage-scale-up.md) to a different pricing tier.
-        <!-- 1. *Database*: **PostgreSQL - Flexible Server**. The server name and database name are set by default to appropriate values.
-        1. *Add Azure Cache for Redis?*: **No**.
-        1. *Hosting plan*: **Basic**. When you're ready, you can [scale up](manage-scale-up.md) to a production pricing tier later.
- -->
-    :::column-end:::
-    :::column:::
-        :::image type="content" source="./media/tutorial-java-quarkus-postgresql-app/azure-portal-create-app-postgres-2.png" alt-text="A screenshot showing the Web App wizard with the Basics tab." lightbox="./media/tutorial-java-quarkus-postgresql-app/azure-portal-create-app-postgres-2.png":::
     :::column-end:::
 :::row-end:::
 :::row:::
@@ -166,9 +175,7 @@ Sign in to the [Azure portal](https://portal.azure.com/) and follow these steps 
         1. Select the **Database** tab.
         1. Select **Create a Database**.
         1. In **Engine**, select **PostgreSQL - Flexible Server**. The server name and database name are set by default to appropriate values.
-    :::column-end:::
-    :::column:::
-        :::image type="content" source="./media/tutorial-java-quarkus-postgresql-app/azure-portal-create-app-postgres-3.png" alt-text="A screenshot showing the Web App wizard with the Database tab." lightbox="./media/tutorial-java-quarkus-postgresql-app/azure-portal-create-app-postgres-3.png":::
+        1. In **PostgreSQL version**, select or verify **16**.
     :::column-end:::
 :::row-end:::
 :::row:::
@@ -190,13 +197,13 @@ Sign in to the [Azure portal](https://portal.azure.com/) and follow these steps 
 :::row-end:::
 :::row:::
     :::column span="2":::
-        **Step 3:** The deployment takes a few minutes to complete. Once deployment completes, select the **Go to resource** button. You're taken directly to the App Service app, but the following resources are created:
+        **Step 5:** The deployment takes a few minutes to complete. When the deployment finishes, select the **Go to resource** button. You're taken directly to the App Service app. The wizard creates the following resources:
         - **Resource group**: The container for all the created resources.
         - **App Service plan**: Defines the compute resources for App Service. A Linux plan in the *Basic* tier is created.
-        - **App Service**: Represents your app and runs in the App Service plan.
+        - **App Service**: Represents your Java 25 app and runs in the App Service plan.
         - **Virtual network**: Integrated with the App Service app and isolates back-end network traffic.
-        - **Azure Database for PostgreSQL flexible server**: Accessible only from within the virtual network. A database and a user are created for you on the server.
-        - **Private DNS zones**: Enables DNS resolution of the key vault and the database server in the virtual network.
+        - **Azure Database for PostgreSQL flexible server 16**: Accessible only from within the virtual network. The wizard creates a database and a user for you on the server.
+        - **Private DNS zone**: Enables DNS resolution of the PostgreSQL server in the virtual network.
     :::column-end:::
     :::column:::
         :::image type="content" source="./media/tutorial-java-quarkus-postgresql-app/azure-portal-create-app-postgres-5.png" alt-text="A screenshot showing the deployment process completed." lightbox="./media/tutorial-java-quarkus-postgresql-app/azure-portal-create-app-postgres-5.png":::
@@ -224,7 +231,7 @@ The creation wizard generated the connectivity variables for you already as [app
 :::row:::
     :::column span="2":::
         **Step 2: Create a subnet for securing Key Vault**
-        The virtual network already has two existing subnets, but one is already delegated to App Service and the other is already delegated to Azure Database for PostgreSQL. You create another one for secure access to Key Vault with a private endpoint (for more information, see [Network security for Azure Key Vault](/azure/key-vault/general/network-security)).
+        The virtual network already has two subnets, but one is delegated to App Service and the other is delegated to Azure Database for PostgreSQL. Create another subnet for secure access to Key Vault with a private endpoint.
         1. In the left menu of the App Service page, select the **Overview** tab.
         1. Select the resource group of the app.
         1. Select the virtual network in the resource group.
@@ -283,7 +290,7 @@ The creation wizard generated the connectivity variables for you already as [app
 :::row-end:::
 :::row:::
     :::column span="2":::
-        **Step 6: Save secrets in key vault**
+        **Step 6: Save PostgreSQL secrets in key vault**
         1. Select the **Authentication** tab.
         1. Select **Connection string**.
         1. In **Username** and **Password**, paste the password you copied earlier.
@@ -330,7 +337,7 @@ The creation wizard generated the connectivity variables for you already as [app
 :::row-end:::
 :::row:::
     :::column span="2":::
-        **Step 10: Delete database credentials from App Service**
+        **Step 10: Delete the original database credentials from App Service**
         1. Select the **Connection strings** tab.
         1. To the right of **AZURE_POSTGRESQL_CONNECTIONSTRING**, select **Delete**. Remember that the create wizard created this connection string for you at the beginning.
     :::column-end:::
@@ -344,8 +351,8 @@ To summarize, the process for securing your connection secrets involved:
 - Retrieving the connection secrets from the App Service app's environment variables.
 - Creating a key vault with a private endpoint.
 - Creating a Key Vault connection with the system-assigned managed identity.
-- Create a service connector to store the connection secrets in the key vault.
-- Delete the old connection secrets from the App Service app.
+- Creating a PostgreSQL Service Connector that stores connection secrets in the key vault.
+- Deleting the old PostgreSQL connection string from the App Service app.
 
 Having issues? Check the [Troubleshooting section](#troubleshooting).
 
@@ -358,6 +365,7 @@ Note the following:
 - Quarkus listens to port 8080 by default. In production, it needs to be configured to listen to the port specified by the `PORT` environment variable in App Service.
 - Your deployed Java package must be an [Uber-Jar](https://quarkus.io/guides/maven-tooling#uber-jar-maven).
 - For simplicity of the tutorial, you'll disable tests during the deployment process. The GitHub Actions runners don't have access to the PostgreSQL database in Azure, so any integration tests that require database access will fail, such as is the case with the Quarkus sample application. 
+- The first Java 25 startup can take a few minutes. App Service continues sending warmup requests while Quarkus initializes.
 
 :::row:::
     :::column span="2":::
@@ -370,55 +378,53 @@ Note the following:
 :::row-end:::
 :::row:::
     :::column span="2":::
-        **Step 2 (Option 1: with GitHub Copilot):**  
-        1. Start a new chat session by selecting the **Chat** view, then selecting **+**.
-        1. Ask, "*@workspace How does the app connect to the database?*" Copilot might give you some explanation about how the Quarkus data source settings are configured in *src/main/resources/application.properties*. 
-        1. Say, "*@workspace I created a PostgreSQL service connector in Azure App Service using the Java client type and the app setting name is AZURE_POSTGRESQL_CONNECTIONSTRING. I want to use this connection string when the app is running in production.*" Copilot might give you a code suggestion similar to the one in the **Option 2: without GitHub Copilot** steps below and even tell you to make the change in the *src/main/resources/application.properties* file.
-        1. Open *src/main/resources/application.properties* in the explorer and add the code suggestion.
-        1. Say, "@workspace How do i configure this project to create an Uber Jar?" Copilot might give you a code suggestion similar to the one in the **Option 2: without GitHub Copilot** steps below and even tell you to make the change in the *src/main/resources/application.properties* file.
-        1. Open *src/main/resources/application.properties* in the explorer and add the code suggestion.
-        1. Say, "@workspace How do I use the App Service port?" Copilot might give you a code suggestion similar to the one in the **Option 2: without GitHub Copilot** steps below and even tell you to make the change in the *src/main/resources/application.properties* file. 
-        1. Open *src/main/resources/application.properties* in the explorer and add the code suggestion.
-        GitHub Copilot doesn't give you the same response every time, and it's not always correct. You might need to ask more questions to fine-tune its response. For tips, see [What can I do with GitHub Copilot in my codespace?](#what-can-i-do-with-github-copilot-in-my-codespace).
-    :::column-end:::
-    :::column:::
-        :::image type="content" source="media/tutorial-java-quarkus-postgresql-app/github-copilot-1.png" alt-text="A screenshot showing how to ask a question in a new GitHub Copilot chat session." lightbox="media/tutorial-java-quarkus-postgresql-app/github-copilot-1.png":::
-    :::column-end:::
-:::row-end:::
-:::row:::
-    :::column span="2":::
-        **Step 2 (Option 2: without GitHub Copilot):**  
-        1. Open *src/main/resources/application.properties* in the explorer. Quarkus uses this file to load Java properties.
-        1. Uncomment lines 10-12. These settings use the app setting you created with the PostgreSQL connector, creates an Uber Jar, and sets the port to the one used by App Service.
-    :::column-end:::
-    :::column:::
-        :::image type="content" source="./media/tutorial-java-quarkus-postgresql-app/azure-portal-deploy-sample-code-2.png" alt-text="A screenshot showing a GitHub codespace and the application.properties file opened." lightbox="./media/tutorial-java-quarkus-postgresql-app/azure-portal-deploy-sample-code-2.png":::
+        **Step 2: Configure Java 25 startup**
+        1. In the App Service page, select **Settings** > **Environment variables**.
+        1. On the **App settings** tab, select **Add**.
+        1. For **Name**, enter `JAVA_OPTS`.
+        1. For **Value**, enter the following value on one line:
+
+            ```text
+            --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+            ```
+
+        5. Select **Apply**, and then select **Confirm**.
+
+        The application on Java 25 requires these module-opening options.
     :::column-end:::
 :::row-end:::
 :::row:::
     :::column span="2":::
-        **Step 3 (Option 1: with GitHub Copilot):**  
-        1. Ask, "*@workspace For the GitHub Actions deployment, I want to skip tests to avoid database related errors.*" Copilot might give you a code suggestion similar to the one in the **Option 2: without GitHub Copilot** steps below and even tell you to make the change in the *.github/workflows/starter-no-infra_msdocs-quarkus-postgres.yml* file. 
-        1. Open *.github/workflows/starter-no-infra_msdocs-quarkus-postgres.yml* in the explorer and add the code suggestion.
-        For tips, see [What can I do with GitHub Copilot in my codespace?](#what-can-i-do-with-github-copilot-in-my-codespace).
-    :::column-end:::
-    :::column:::
-        :::image type="content" source="media/tutorial-java-quarkus-postgresql-app/github-copilot-2.png" alt-text="A screenshot showing how to ask a question about GitHub Actions deployment in a new GitHub Copilot chat session." lightbox="media/tutorial-java-quarkus-postgresql-app/github-copilot-2.png":::
-    :::column-end:::
-:::row-end:::
-:::row:::
-    :::column span="2":::
-        **Step 3 (Option 2: without GitHub Copilot):**  
-        1. Open *.github/workflows/starter-no-infra_msdocs-quarkus-postgres.yml* in the explorer. This is the GitHub Actions workflow that the create wizard created for you.
-        1. Find the `Build with Maven` step, and modify the `run` command to `mvn clean install -DskipTests`. `-DskipTests` tells Maven to skip tests so that the deployment doesn't fail on database errors. The GitHub Actions container can't connect to a PostgreSQL server.
-    :::column-end:::
-    :::column:::
-        :::image type="content" source="./media/tutorial-java-quarkus-postgresql-app/azure-portal-deploy-sample-code-3.png" alt-text="A screenshot showing a GitHub codespace and a GitHub workflow file opened." lightbox="./media/tutorial-java-quarkus-postgresql-app/azure-portal-deploy-sample-code-3.png":::
+        **Step 3: Configure Quarkus for App Service**
+        1. Open *src/main/resources/application.properties* in the codespace.
+        1. Ensure that schema management uses the current `quarkus.hibernate-orm.schema-management.strategy` property name. For example, the development configuration can use `quarkus.hibernate-orm.schema-management.strategy=drop-and-create`.
+        1. Add or update the production properties so that they match the following example:
+
+            ```properties
+            %prod.quarkus.datasource.jdbc.url=${AZURE_POSTGRESQL_CONNECTIONSTRING}
+            quarkus.package.jar.type=uber-jar
+            %prod.quarkus.http.port=${PORT}
+            ```
+
+        The PostgreSQL connection string is supplied by Service Connector through `AZURE_POSTGRESQL_CONNECTIONSTRING`.
     :::column-end:::
 :::row-end:::
 :::row:::
     :::column span="2":::
-        **Step 4:**
+        **Step 4: Configure the GitHub Actions build**
+        1. Open *.github/workflows/starter-no-infra_msdocs-quarkus-postgres.yml*. This file is the GitHub Actions workflow that the create wizard generated.
+        1. Find the `Build with Maven` step and set its command to:
+
+            ```yaml
+            run: mvn clean install -Dquarkus.package.jar.type=uber-jar -DskipTests
+            ```
+
+        `-DskipTests` skips integration tests because the GitHub-hosted runner can't reach PostgreSQL through the private endpoint. The current Quarkus Maven property is `quarkus.package.jar.type`.
+    :::column-end:::
+:::row-end:::
+:::row:::
+    :::column span="2":::
+        **Step 5:**
         1. Select the **Source Control** extension.
         1. In the textbox, type a commit message like `Configure DB and deployment`. Or, select :::image type="icon" source="media/quickstart-dotnetcore/github-copilot-in-editor.png" border="false"::: and let GitHub Copilot generate a commit message for you.
         1. Select **Commit**, then confirm with **Yes**.
@@ -430,7 +436,7 @@ Note the following:
 :::row-end:::
 :::row:::
     :::column span="2":::
-        **Step 5:**
+        **Step 6:**
         1. From the left menu, select **Deployment** > **Deployment Center** > **Logs**.
         1. In the log item for the deployment run, select the **Build/Deploy Logs** entry with the latest timestamp.
     :::column-end:::
@@ -440,10 +446,7 @@ Note the following:
 :::row-end:::
 :::row:::
     :::column span="2":::
-        **Step 6:** You're taken to your GitHub repository and see that the GitHub action is running. The workflow file defines two separate stages, build and deploy. Wait for the GitHub run to show a status of **Success**. It takes about 5 minutes.
-    :::column-end:::
-    :::column:::
-        :::image type="content" source="./media/tutorial-java-quarkus-postgresql-app/azure-portal-deploy-sample-code-6.png" alt-text="A screenshot showing a GitHub run in progress." lightbox="./media/tutorial-java-quarkus-postgresql-app/azure-portal-deploy-sample-code-6.png":::
+        **Step 7:** You're taken to your GitHub repository and see that the GitHub action is running. The workflow file defines separate build and deploy jobs. Wait for the GitHub run to show a status of **Success**. The deployment and first Java 25 startup can take several minutes.
     :::column-end:::
 :::row-end:::
 
@@ -535,124 +538,80 @@ When you're finished, you can delete all of the resources from your Azure subscr
 
 ::: zone-end
 
+<!-- markdownlint-disable-next-line MD044 -->
 ::: zone pivot="azure-developer-cli"
 
 ## 2. Create Azure resources and deploy a sample app
 
-In this step, you create the Azure resources and deploy a sample app to App Service on Linux. The steps used in this tutorial create a set of secure-by-default resources that include App Service and Azure Database for PostgreSQL.
+In this step, you use the AZD files already included on the sample repository's `main` branch. They create the secure-by-default architecture and deploy the application to App Service on Linux. You don't need to initialize or overlay a separate template.
 
 The dev container already has the [Azure Developer CLI](/azure/developer/azure-developer-cli/install-azd) (AZD).
 
-1. From the repository root of the GitHub codespace, run `azd init`.
-
-    ```bash
-    azd init --template javase-app-service-postgresql-infra
-    ```
-
-1. When prompted, give the following answers:
-    
-    |Question  |Answer  |
-    |---------|---------|
-    |The current directory is not empty. Would you like to initialize a project here in '\<your-directory>'?     | **Y**        |
-    |What would you like to do with these files?     | **Keep my existing files unchanged**        |
-    |Enter a new environment name     | Type a unique name. The AZD template uses this name as part of the DNS name of your web app in Azure (`<app-name>-<hash>.azurewebsites.net`). Alphanumeric characters and hyphens are allowed.          |
-
-1. Sign into Azure by running the `azd auth login` command and following the prompt:
+1. From the repository root of the GitHub codespace, sign in to Azure:
 
     ```bash
     azd auth login
-    ```  
+    ```
 
-1. Create the necessary Azure resources with the `azd provision` command. Follow the prompt to select the desired subscription and location for the Azure resources.
+1. Create an AZD environment. Use a unique environment name of no more than 25 characters. Alphanumeric characters and hyphens are allowed. This limit keeps generated Azure Managed Redis names within cross-region naming limits.
 
     ```bash
-    azd provision
-    ```  
+    azd env new <environment-name>
+    ```
 
-    The `azd provision` command takes about 15 minutes to complete (the Redis cache takes the most time). Later, you'll modify your code to work with App Service and deploy the changes with `azd deploy`. While it's running, the command provides messages about the provisioning and deployment process, including a link to the deployment in Azure.
+1. Preview the infrastructure changes. Follow the prompts to select the subscription and location.
 
-    This AZD template contains files (*azure.yaml* and the *infra* directory) that generate a secure-by-default architecture with the following Azure resources:
+    ```bash
+    azd provision --preview
+    ```
 
-    - **Resource group**: The container for all the created resources.
-    - **App Service plan**: Defines the compute resources for App Service. A Linux plan in the *Basic* tier is created.
-    - **App Service**: Represents your app and runs in the App Service plan.
-    - **Virtual network**: Integrated with the App Service app and isolates back-end network traffic.
-    - **Private endpoints**: Access endpoints for the key vault and the Redis cache in the virtual network.
-    - **Network interfaces**: Represents private IP addresses, one for each of the private endpoints.
-    - **Azure Database for PostgreSQL flexible server**: Accessible only from within the virtual network. A database and a user are created for you on the server.
-    - **Private DNS zone**: Enables DNS resolution of the PostgreSQL server in the virtual network.
-    - **Log Analytics workspace**: Acts as the target container for your app to ship its logs, where you can also query the logs.
-    - **Azure Cache for Redis**: Accessible only from behind its private endpoint.
-    - **Key vault**: Accessible only from behind its private endpoint. Used to manage secrets for the App Service app.
+    The preview evaluates the infrastructure without creating resources. Review the proposed changes before continuing.
 
-1. Once provisioning finishes, find the setting `AZURE_POSTGRESQL_CONNECTIONSTRING` in the AZD output. To keep secrets safe, only the setting names are displayed. They look like this in the AZD output:
+1. Provision the resources and deploy the application:
 
-    <pre>
-    App Service app has the following connection settings:
-            - AZURE_POSTGRESQL_CONNECTIONSTRING
-            - AZURE_REDIS_CONNECTIONSTRING
-            - AZURE_KEYVAULT_RESOURCEENDPOINT
-            - AZURE_KEYVAULT_SCOPE
-    </pre>
+    ```bash
+    azd up
+    ```
 
-    The AZD template you use generated the connectivity variables for you already as [app settings](configure-common.md#configure-app-settings) and outputs the them to the terminal for your convenience. App settings are one way to keep connection secrets out of your code repository. You can also find the direct link to the app settings page for the created App Service app.
+    Provisioning and deployment take about 15 minutes. Azure Managed Redis usually takes the longest to provision, and the first Java 25 startup can take a few minutes. The command shows links to the Azure deployment and the deployed application.
+
+The sample's *azure.yaml* and *infra* directory create the following resources and configuration:
+
+- **Resource group**: Contains all created resources.
+- **App Service plan**: Provides the Linux compute resources in the *Basic* tier.
+- **App Service**: Runs the Quarkus application on Java 25.
+- **Virtual network**: Integrates with App Service and isolates back-end traffic.
+- **Azure Database for PostgreSQL flexible server 16**: Contains the application database and user and is accessible only within the virtual network.
+- **Azure Managed Redis `Balanced_B0`**: Its `default` database uses encrypted connections, access-key authentication, and a private endpoint with public network access disabled.
+- **Key Vault**: Stores the PostgreSQL and Azure Managed Redis secrets and is accessible only through its private endpoint.
+- **Private endpoints and network interfaces**: Provide private IP addresses for Key Vault and Azure Managed Redis.
+- **Private DNS zones**: Resolve PostgreSQL, Key Vault, and Azure Managed Redis names within the virtual network.
+- **Log Analytics workspace**: Receives App Service logs and supports log queries.
+- **Service Connectors**: Configure the application connections to PostgreSQL, Azure Managed Redis, and Key Vault.
+
+After deployment, AZD displays these four connector-generated setting names without exposing their secret values:
+
+```output
+App Service app has the following connection settings:
+        - AZURE_POSTGRESQL_CONNECTIONSTRING
+        - AZURE_REDIS_CONNECTIONSTRING
+        - AZURE_KEYVAULT_RESOURCEENDPOINT
+        - AZURE_KEYVAULT_SCOPE
+```
+
+The template adds these [app settings](configure-common.md#configure-app-settings) and stores secrets in Key Vault. It also configures `JAVA_OPTS` with the Java 25 module-opening options. `JAVA_OPTS` is a runtime setting, not a connection setting, so it isn't included in the preceding list.
+
+The sample already contains its production Quarkus settings. Don't uncomment or add settings after `azd up`. To deploy later application changes without reprovisioning the infrastructure, run:
+
+```bash
+azd deploy
+```
 
 Having issues? Check the [Troubleshooting section](#troubleshooting).
 
-## 3. Modify sample code and redeploy
+## 3. Browse to the app
 
-You must make some changes in your application code to make it work with App Service:
-
-- Quarkus listens to port 8080 by default. In production, it needs to be configured to listen to the port specified by the `PORT` environment variable in App Service.
-- Your deployed Java package must be an [Uber-Jar](https://quarkus.io/guides/maven-tooling#uber-jar-maven).
-- For simplicity of the tutorial, you'll disable tests during the deployment process. The GitHub Actions runners don't have access to the PostgreSQL database in Azure, so any integration tests that require database access will fail, such as is the case with the Quarkus sample application. 
-
-# [With GitHub Copilot](#tab/copilot)
-
-1. In the GitHub codespace, start a new chat session by selecting the **Chat** view, then selecting **+**.
-1. Ask, "*@workspace How does the app connect to the database?*" Copilot might give you some explanation about how the quarkus data source settings are configured in *src/main/resources/application.properties*. 
-1. Say, "*@workspace I have created a PostgreSQL service connector in Azure App Service using the Java client type and the app setting name is AZURE_POSTGRESQL_CONNECTIONSTRING. I want to use this connection string when the app is running in production.*" Copilot might give you a code suggestion similar to the one in the **Option 2: without GitHub Copilot** steps below and even tell you to make the change in the *src/main/resources/application.properties* file.
-1. Add the code suggestion in *src/main/resources/application.properties*.
-1. Say, "@workspace How do i configure this project to create an Uber Jar?" Copilot might give you a code suggestion similar to the one in the **Option 2: without GitHub Copilot** steps below and even tell you to make the change in the *src/main/resources/application.properties* file.
-1. Add the code suggestion in *src/main/resources/application.properties*.
-1. Say, "@workspace How do I use the App Service port?" Copilot might give you a code suggestion similar to the one in the **Option 2: without GitHub Copilot** steps below and even tell you to make the change in the *src/main/resources/application.properties* file. 
-1. Add the code suggestion in *src/main/resources/application.properties*.
-
-    GitHub Copilot doesn't give you the same response every time, and it's not always correct. You might need to ask more questions to fine-tune its response. For tips, see [What can I do with GitHub Copilot in my codespace?](#what-can-i-do-with-github-copilot-in-my-codespace).
-
-1. In the terminal, run `azd deploy`.
- 
-    ```bash
-    azd deploy
-    ```
-
-# [Without GitHub Copilot](#tab/nocopilot)
-
-1. Open *src/main/resources/application.properties* in the explorer. Quarkus uses this file to load Java properties.
-1. Uncomment lines 10-12. These settings use the app setting you created with the PostgreSQL connector, creates an Uber Jar, and sets the port to the one used by App Service.
-1. In the terminal, run `azd deploy`.
- 
-    ```bash
-    azd deploy
-    ```
-
-> [!NOTE]
-> If you run `azd up`, it combines `azd package`, `azd provision`, and `azd deploy`. The reason you didn't do it at the beginning was because you didn't have the PostgreSQL connection settings to modify your code with yet. If you ran `azd up` then, the deploy stage would stall because the Quarkus app wouldn't be able to start without the changes you made here.
-
------
-
-Having issues? Check the [Troubleshooting section](#troubleshooting).
-
-## 5. Browse to the app
-
-1. In the AZD output, find the URL of your app and navigate to it in the browser. The URL looks like this in the AZD output:
-
-    <pre>
-    Deploying services (azd deploy)
-    
-      (✓) Done: Deploying service web
-      - Endpoint: https://&lt;app-name>.azurewebsites.net/
-    </pre>
+1. In the AZD output, find the **Endpoint** shown after the `Deploying service web` message and go to it in the browser.
 
 2. Add a few fruits to the list.
 
@@ -662,7 +621,7 @@ Having issues? Check the [Troubleshooting section](#troubleshooting).
 
 Having issues? Check the [Troubleshooting section](#troubleshooting).
 
-## 6. Stream diagnostic logs
+## 4. Stream diagnostic logs
 
 Azure App Service can capture console logs to help you diagnose issues with your application. For convenience, the AZD template already [enables logging to the local file system](troubleshoot-diagnostic-logs.md#enable-application-logging-linuxcontainer) and is [shipping the logs to a Log Analytics workspace](troubleshoot-diagnostic-logs.md#send-logs-to-azure-monitor).
 
@@ -680,12 +639,12 @@ Learn more about logging in Java apps in the series on [Enable Azure Monitor Ope
 
 Having issues? Check the [Troubleshooting section](#troubleshooting).
 
-## 7. Clean up resources
+## 5. Clean up resources
 
-To delete all Azure resources in the current deployment environment, run `azd down` and follow the prompts.
+To completely delete all Azure resources in the current deployment environment, including purged soft-deleted resources where supported, run `azd down --purge` and follow the prompts.
 
 ```bash
-azd down
+azd down --purge
 ```
 
 ::: zone-end
@@ -702,7 +661,21 @@ This Quarkus error is most likely because the app can't connect to the Azure dat
 
 ### The app failed to start and the log stream shows "Waiting for response to warmup request for container"
 
-Your application is probably not configured to listen to the port specified by the App Service `PORT` environment variable, so it can't respond to any requests. If App Service doesn't get a response from your application, it assumes that the application failed to start. Go back to [4. Deploy sample code](#4-deploy-sample-code) and verify that *application.properties* is configured properly.
+The first Java 25 startup can take a few minutes, so wait for Quarkus initialization to finish. If warmup continues, the application is probably not configured to listen to the port specified by the App Service `PORT` environment variable. Go back to [4. Deploy sample code](#4-deploy-sample-code) and verify that *application.properties* contains `%prod.quarkus.http.port=${PORT}`.
+
+### The app failed to start and the log stream shows "module java.base does not open java.lang to unnamed module"
+
+Java 25 requires module-opening options for this application. The AZD template configures the required `JAVA_OPTS` value automatically. For the Portal workflow, verify that the App Service application setting is present and has this value:
+
+```text
+--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+```
+
+After you add or correct the setting, restart the App Service app.
+
+### The app reports that the PostgreSQL server version isn't supported
+
+Quarkus 3.38.1 uses Hibernate ORM 7, which requires PostgreSQL 14 or later. This tutorial and its AZD template provision PostgreSQL 16. In the Azure portal, open the flexible server **Overview** page and verify that **PostgreSQL version** is **16**. If you connected the app to an older server, upgrade or replace that server and update the Service Connector.
 
 ### The app works, but I see the error log "ERROR [org.acm.hib.orm.pan.ent.FruitEntityResource] (vert.x-eventloop-thread-0) Failed to handle request: jakarta.ws.rs.NotFoundException: HTTP 404 Not Found".
 
@@ -724,15 +697,19 @@ In App Service, this error also happens on every app startup because App Service
 Pricing for the created resources is as follows:
 
 - The App Service plan is created in **Basic** tier and can be scaled up or down. See [App Service pricing](https://azure.microsoft.com/pricing/details/app-service/linux/).
-- The PostgreSQL flexible server is created in the lowest burstable tier **Standard_B1ms**, with the minimum storage size, which can be scaled up or down. See [Azure Database for PostgreSQL pricing](https://azure.microsoft.com/pricing/details/postgresql/flexible-server/).
+- The PostgreSQL 16 flexible server is created in the lowest burstable tier **Standard_B1ms**, with the minimum storage size, and you can scale it up or down. See [Azure Database for PostgreSQL pricing](https://azure.microsoft.com/pricing/details/postgresql/flexible-server/).
+- The AZD workflow creates Azure Managed Redis with the **Balanced_B0** SKU. The portal workflow doesn't create Azure Managed Redis. See [Azure Managed Redis pricing](https://azure.microsoft.com/pricing/details/managed-redis/).
 - The virtual network doesn't incur a charge unless you configure extra functionality, such as peering. See [Azure Virtual Network pricing](https://azure.microsoft.com/pricing/details/virtual-network/).
-- The private DNS zone incurs a small charge. See [Azure DNS pricing](https://azure.microsoft.com/pricing/details/dns/). 
+- Private endpoints incur hourly and data-processing charges. The portal workflow uses a private endpoint for Key Vault; the AZD workflow also uses one for Azure Managed Redis. See [Azure Private Link pricing](https://azure.microsoft.com/pricing/details/private-link/).
+- Private DNS zones incur small charges. The AZD workflow creates zones for PostgreSQL, Key Vault, and Azure Managed Redis. See [Azure DNS pricing](https://azure.microsoft.com/pricing/details/dns/).
+- Key Vault charges for stored keys and secrets and for operations. See [Key Vault pricing](https://azure.microsoft.com/pricing/details/key-vault/).
+- Log Analytics charges for data ingestion and retention beyond included allowances. See [Azure Monitor pricing](https://azure.microsoft.com/pricing/details/monitor/).
 
 ### How do I connect to the PostgreSQL server that's secured behind the virtual network with other tools?
 
 - For basic access from a command-line tool, you can run `psql` from the app's SSH terminal.
 - To connect from a desktop tool, your machine must be within the virtual network. For example, it could be an Azure VM that's connected to one of the subnets, or a machine in an on-premises network that has a [site-to-site VPN](../vpn-gateway/vpn-gateway-about-vpngateways.md) connection with the Azure virtual network.
-- You can also [integrate Azure Cloud Shell](../cloud-shell/private-vnet.md) with the virtual network.
+- You can also [use Azure Cloud Shell](../cloud-shell/vnet/overview.md) in a virtual network.
 
 ### How does local app development work with GitHub Actions?
 
@@ -741,12 +718,12 @@ Using the autogenerated workflow file from App Service as an example, each `git 
 ```terminal
 git add .
 git commit -m "<some-message>"
-git push origin main
+git push origin starter-no-infra
 ```
 
 ### What if I want to run tests with PostgreSQL during the GitHub workflow?
 
-The default Quarkus sample application includes tests with database connectivity. To avoid connection errors, you added the `-skipTests` property. If you want, you can run the tests against a PostgreSQL service container. For example, in the automatically generated workflow file in your GitHub fork (*.github/workflows/main_cephalin-quarkus.yml*), make the following changes:
+The default Quarkus sample application includes tests with database connectivity. To avoid connection errors, you added the `-DskipTests` property. If you want, you can run the tests against a PostgreSQL service container. For example, in the automatically generated workflow file in your GitHub fork (*.github/workflows/starter-no-infra_\<app-name>.yml*), make the following changes:
 
 1. Add YAML code for the PostgreSQL container to the `build` job, as shown in the following snippet.
 
@@ -761,7 +738,7 @@ The default Quarkus sample application includes tests with database connectivity
         services:
           # Hostname for the PostgreSQL container
           postgresdb:
-            image: postgres
+                        image: postgres:16
             env:
               POSTGRES_PASSWORD: postgres
               POSTGRES_USER: postgres
@@ -782,11 +759,11 @@ The default Quarkus sample application includes tests with database connectivity
     
     `container: ubuntu` tells GitHub to run the `build` job in a container. This way, the connection string in your dev environment `jdbc:postgresql://postgresdb:5432/postgres` can work as-is in when the workflow runs. For more information about PostgreSQL connectivity in GitHub Actions, see [Creating PostgreSQL service containers](https://docs.github.com/en/actions/using-containerized-services/creating-postgresql-service-containers).
 
-1. In the `Build with Maven` step, remove `-DskipTests`. For example:
+1. In the `Build with Maven` step, remove `-DskipTests`. The `starter-no-infra` branch doesn't preconfigure Uber-Jar packaging, so retain the current Quarkus package property:
 
     ```yml
           - name: Build with Maven
-            run: mvn clean install -Dquarkus.package.type=uber-jar
+            run: mvn clean install -Dquarkus.package.jar.type=uber-jar
     ```
 
 ### I don't have permissions to create a user-assigned identity
@@ -807,13 +784,13 @@ A few tips for you when you talk to GitHub Copilot:
 ## Next steps
 
 - [Azure for Java Developers](/java/azure/)
-- [Quarkus](https://quarkus.io),
+- [Quarkus](https://quarkus.io)
 - [Getting Started with Quarkus](https://quarkus.io/get-started/)
 
 Learn more about running Java apps on App Service in the developer guide.
 
 > [!div class="nextstepaction"] 
-> [Configure a Java app in Azure App Service](configure-language-java.md?pivots=platform-linux)
+> [Configure a Java app in Azure App Service](configure-language-java-deploy-run.md)
 
 Learn how to secure your app with a custom domain and certificate.
 
